--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,11 +9,10 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "lucide-react": "^0.344.0",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
-        "react-router-dom": "^6.22.0",
-        "react-markdown": "^9.0.1",
-        "lucide-react": "^0.344.0"
+        "react-router-dom": "^6.22.0"
     },
     "devDependencies": {
         "@types/react": "^18.3.1",
